adding build properties